ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: ingress.ru
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: test-service
                port:
                  number: 80
